--- a/Pruebas-o-ejercicios/Prueba.html
+++ b/Pruebas-o-ejercicios/Prueba.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./Consola/Consola.js"></script>
+    <script src="./Pruebas/Consola.js"></script>
+    <script src="./Pruebas/Variables.js"></script>
   </body>
 </html>
