--- a/Pruebas-o-ejercicios/Prueba.html
+++ b/Pruebas-o-ejercicios/Prueba.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <script src="./Pruebas/Consola.js"></script>
-    <script src="./Pruebas/Variables.js"></script>
+    <p>
+      <script src="./Pruebas/Variables.js"></script>
+    </p>
+    <script src="./Pruebas/Array.js"></script>
+    <p>
+      <script src="./Pruebas/Bucles.js"></script>
+    </p>
   </body>
 </html>
