--- a/Pruebas-o-ejercicios/Prueba.html
+++ b/Pruebas-o-ejercicios/Prueba.html
@@ -14,5 +14,6 @@
     <p>
       <script src="./Pruebas/Bucles.js"></script>
     </p>
+    <script src="./Pruebas/Funciones.js"></script>
   </body>
 </html>
