--- a/Pruebas-o-ejercicios/Pruebas/Prueba.html
+++ b/Pruebas-o-ejercicios/Pruebas/Prueba.html
@@ -6,14 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./Pruebas/Consola.js"></script>
+    <script src="./Consola.js"></script>
     <p>
-      <script src="./Pruebas/Variables.js"></script>
+      <script src="./Variables.js"></script>
     </p>
-    <script src="./Pruebas/Array.js"></script>
+    <script src="./Array.js"></script>
     <p>
-      <script src="./Pruebas/Bucles.js"></script>
+      <script src="./Bucles.js"></script>
     </p>
-    <script src="./Pruebas/Funciones.js"></script>
+    <script src="./Funciones.js"></script>
   </body>
 </html>
