--- a/Pruebas-o-ejercicios/Pruebas/Prueba.html
+++ b/Pruebas-o-ejercicios/Pruebas/Prueba.html
@@ -15,5 +15,8 @@
       <script src="./Bucles.js"></script>
     </p>
     <script src="./Funciones.js"></script>
+    <p>
+      <script src="./POO.js"></script>
+    </p>
   </body>
 </html>
