--- a/Pruebas1/Prueba.html
+++ b/Pruebas1/Prueba.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <input type="range" class="Rango">
+    <label>Rango de edad  </label>
     <script src="./Consola.js"></script>
     <p>
       <script src="./Variables.js"></script>
@@ -18,5 +20,6 @@
     <p>
       <script src="./POO.js"></script>
     </p>
+      <script src="./DOM.js"></script>
   </body>
 </html>
