--- a/Pruebas1/Prueba.html
+++ b/Pruebas1/Prueba.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="range" class="Rango">
-    <label>Rango de edad  </label>
     <script src="./Consola.js"></script>
     <p>
       <script src="./Variables.js"></script>
@@ -20,6 +18,21 @@
     <p>
       <script src="./POO.js"></script>
     </p>
-      <script src="./DOM.js"></script>
+
+    <input type="text" class="texto" value="Casa">
+    <label>Rango de edad  </label>
+
+    <h1 class="editable" value="Esto es editable">Bueno...</h1>
+
+    <input type="file" class="fotos">
+
+    <form id = "form">
+      <input type="text" class="input1">
+      <input type="submit" class="input2">
+    </form>
+      <input type="submit" value="Enviar" form="form">
+
+    <script src="./DOM.js"></script>
+
   </body>
 </html>
