--- a/Pruebas1/Prueba.html
+++ b/Pruebas1/Prueba.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Prueba.css">
     <title>Document</title>
   </head>
   <body>
@@ -26,11 +27,18 @@
 
     <input type="file" class="fotos">
 
+    <br><br>
+
     <form id = "form">
       <input type="text" class="input1">
       <input type="submit" class="input2">
     </form>
+    <br>
       <input type="submit" value="Enviar" form="form">
+
+    <br><br>
+
+    <h1 class="patata">Patata</h1>
 
     <script src="./DOM.js"></script>
 
