--- a/Prueba2/Prueba2.html
+++ b/Prueba2/Prueba2.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <button type="button" class="button"></button>
+
+    <a target="_blank" class=""></a>
+
+    <script src="./Windows.js"></script>
 </body>
 </html>
