--- a/Prueba2/Prueba2.html
+++ b/Prueba2/Prueba2.html
@@ -9,8 +9,11 @@
 
     <button type="button" class="button"></button>
 
-    <a target="_blank" class=""></a>
+    <br><br>
+
+    <input type="text" class="texto">
 
     <script src="./Windows.js"></script>
+
 </body>
 </html>
