--- a/Prueba2/Prueba2.html
+++ b/Prueba2/Prueba2.html
@@ -7,13 +7,23 @@
 </head>
 <body>
 
-    <button type="button" class="button"></button>
-
-    <br><br>
+    <button type="button" class="button">Enviar</button>
 
     <input type="text" class="texto">
 
     <script src="./Windows.js"></script>
+    <br><br>
+    <script src="./Location.js"></script>
+    <br><br>
+    <script src="./Eventos.js"></script>
+    <br><br>
+    <script src="./Try_Catch.js"></script>
+    <br><br>
+    <script src="./Callbacks.js"></script>
+    <br><br>
+    <script src="./Promesas.js"></script>
+    <br><br>
+    <script src="./Async_Await.js"></script>
 
 </body>
 </html>
