--- a/Prueba3/Prueba3.html
+++ b/Prueba3/Prueba3.html
@@ -9,5 +9,13 @@
     <script src="./Prototipo.js"></script>
     <br><br>
     <script src="./This.js"></script>
+    <br><br>
+    <script src="./Clausuras.js"></script>
+    <br><br>
+    <script src="./Parametro_Rest.js"></script>
+    <br><br>
+    <script src="./Tipos_de_Prototypes.js"></script>
+    <br><br>
+    <script src="./Operadores_Temarios.js"></script>
 </body>
 </html>
