--- a/.vscode/Pruebas/Prueba3/Prueba3.html
+++ b/.vscode/Pruebas/Prueba3/Prueba3.html
@@ -21,5 +21,7 @@
     
     <script src="./Objeto_Date.js"></script>
 
+    <script src="./Local_y_Session_Storage.js"></script>
+
 </body>
 </html>
